# on-rclone

./: .gitignore  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.zed/: settings.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/tauri-plugin-otray/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-otray/permissions/: default.toml
src-tauri/crates/tauri-plugin-otray/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-otray/permissions/autogenerated/commands/: quit.toml
src-tauri/crates/tauri-plugin-otray/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-otray/src/: lib.rs
src-tauri/crates/tauri-plugin-rclone/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-rclone/permissions/: default.toml
src-tauri/crates/tauri-plugin-rclone/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-rclone/permissions/autogenerated/commands/: nfsmount.toml
src-tauri/crates/tauri-plugin-rclone/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-rclone/src/: commands.rs  fse.rs  lib.rs  rclone.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/src/utils/: rclone.ts
