[package]
name = "tauri-plugin-rclone"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-rclone"

[dependencies]
tauri = { version = "2.8.2" }
serde = "1.0"
thiserror = "2"
tauri-plugin-shell = "2.2.0"
tokio = { version = "1.43.0", features = ["sync"] }
nix = { version = "0.29.0", features = ["signal"] }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
